// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput must match the snapshot with default Props 1`] = `
.c0 {
  width: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgb(232,24,68);
  font-size: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 svg {
  fill: rgb(232,24,68);
}

@media (min-width:767px) {
  .c0 {
    font-size: 18px;
  }
}

<MiddleFakeInputStyle>
  <label
    aria-label="qux"
    className="c0"
    htmlFor="bar"
  >
    <svg
      aria-hidden={true}
      height="1em"
      type="SvgLock"
      viewBox="0 0 13 16"
      width="1em"
    >
      <path
        d="M12.684 7.59a1.041 1.041 0 0 0-.768-.317h-.36V5.09c0-1.394-.497-2.59-1.49-3.59S7.884 0 6.5 0 3.927.5 2.934 1.5c-.993 1-1.49 2.197-1.49 3.59v2.183h-.36c-.302 0-.557.106-.768.318-.21.212-.316.47-.316.773v6.545c0 .303.105.56.316.773.21.212.466.318.767.318h10.834c.3 0 .556-.106.767-.318.21-.212.316-.47.316-.773V8.364c0-.303-.105-.56-.316-.773zm-3.295-.317H3.61V5.09c0-.803.282-1.489.846-2.057A2.774 2.774 0 0 1 6.5 2.182c.798 0 1.478.284 2.043.852.564.568.846 1.254.846 2.057z"
      />
    </svg>
  </label>
  <BasicInputStyle
    aria-required={true}
    id="bar"
    name="bar"
    onChange={[Function]}
    placeholder="qux"
    required={true}
    tabIndex={0}
    type="password"
    value="baz"
  />
  <PasswordButton
    isPasswordDisplayed={false}
    tabIndex={0}
    toggleIsPasswordDisplayed={[Function]}
  />
</MiddleFakeInputStyle>
`;

exports[`PasswordInput must return the diff between snapshot when password is displayed vs hidden 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`PasswordInput must return the diff between snapshot when password is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -15,16 +15,16 @@
          d="M12.684 7.59a1.041 1.041 0 0 0-.768-.317h-.36V5.09c0-1.394-.497-2.59-1.49-3.59S7.884 0 6.5 0 3.927.5 2.934 1.5c-.993 1-1.49 2.197-1.49 3.59v2.183h-.36c-.302 0-.557.106-.768.318-.21.212-.316.47-.316.773v6.545c0 .303.105.56.316.773.21.212.466.318.767.318h10.834c.3 0 .556-.106.767-.318.21-.212.316-.47.316-.773V8.364c0-.303-.105-.56-.316-.773zm-3.295-.317H3.61V5.09c0-.803.282-1.489.846-2.057A2.774 2.774 0 0 1 6.5 2.182c.798 0 1.478.284 2.043.852.564.568.846 1.254.846 2.057z"
        />
      </svg>
    </label>
    <BasicInputStyle
-     aria-required={true}
+     aria-required={false}
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
-     required={true}
+     required={false}
      tabIndex={0}
      type="password"
      value="baz"
    />
    <PasswordButton
`;

exports[`PasswordInput must return the diff between snapshot with a negative vs a postive Tab Index 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -21,15 +21,15 @@
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={true}
-     tabIndex="-1"
+     tabIndex="0"
      type="password"
      value="baz"
    />
    <PasswordButton
      isPasswordDisplayed={false}
-     tabIndex="-1"
+     tabIndex="0"
      toggleIsPasswordDisplayed={[Function anonymous]}
    />
  </MiddleFakeInputStyle>
`;
